--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ body {
 }
 
 #input-task {
+  width: 100%;
   padding: 10px;
   border-radius: 10px;
   margin-bottom: 30px;
@@ -32,9 +33,16 @@ body {
 
 
 .task {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   list-style: none;
   background-color: aquamarine;
   margin-bottom: 10px;
   padding: 10px;
   border-radius: 10px;
+}
+
+.remove-task {
+  cursor: pointer;
 }
