--- a/style.css
+++ b/style.css
@@ -16,10 +16,10 @@ body {
 
 #todo-container {
   width: 500px;
-  background-color: rgb(149, 148, 150);
+  background-color: rgb(179, 179, 179);
   border-radius: 10px;
   padding: 20px;
-  min-height: 500px;
+  min-height: 700px;
 }
 
 #title {
@@ -56,38 +56,28 @@ body {
 #btns {
   display: flex;
   justify-content: space-between;
-  margin-top: 40px;
+  margin-bottom: 30px;
+}
 
+#clear-done-task, #clear-list, #save-list   {
+  border: none;
+  padding: 10px 20px;
+  border-radius: 10px;
+  cursor: pointer;
+  box-shadow: 5px 5px 15px rgba(0, 0, 0, .7);
+  font-size: 20px;
 }
 
 #clear-done-task {
   background-color: rgb(0, 183, 255);
-  border: none;
-  padding: 10px 20px;
-  border-radius: 10px;
-  cursor: pointer;
-  box-shadow: 5px 5px 15px rgba(0, 0, 0, .7);
-  font-size: 20px;
 }
 
 #clear-list {
   background-color: rgb(255, 0, 0);
-  border: none;
-  padding: 10px 20px;
-  border-radius: 10px;
-  cursor: pointer;
-  box-shadow: 5px 5px 15px rgba(0, 0, 0, .7);
-  font-size: 20px;
 }
 
 
 #save-list {
-  background-color: rgb(43, 255, 0);
-  border: none;
-  padding: 10px 20px;
-  border-radius: 10px;
-  cursor: pointer;
-  box-shadow: 5px 5px 15px rgba(0, 0, 0, .7);
-  font-size: 20px;
+  background-color: rgb(255, 196, 0);
 }
 
